--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.gruijter.powerhour",
-  "version": "5.1.2",
+  "version": "5.1.3",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -24,7 +24,7 @@
       "plugwise",
       "beeclear",
       "tibber",
-      "homewizzard",
+      "homewizard",
       "solar panel",
       "P1",
       "DSMR",
