--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.1.2",
+  "version": "5.1.3",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -25,7 +25,7 @@
       "plugwise",
       "beeclear",
       "tibber",
-      "homewizzard",
+      "homewizard",
       "solar panel",
       "P1",
       "DSMR",
@@ -2527,7 +2527,7 @@
         },
         "titleFormatted": {
           "en": "Set energy tariff for group [[group]] to [[tariff]]",
-          "de": "Stromtarif gruppe [[group]] einstellen auf [[tariff]]",
+          "de": "Stromtarif [[group]] einstellen auf [[tariff]]",
           "sv": "Ställ in [[group]] energitariffen till [[tariff]]",
           "it": "Imposta [[group]] tariffa energia a [[tariff]]",
           "no": "Sett [[group]] energitariff to [[tariff]]",
@@ -3857,12 +3857,14 @@
               "type": "number",
               "label": {
                 "en": "Year target budget (m³)",
-                "nl": "Jaar doelbudget (m³)"
+                "nl": "Jaar doelbudget (m³)",
+                "de": "Jahreszielbudget (m³)"
               },
               "value": 1200,
               "hint": {
                 "en": "The total target budget for a year. Attention: the year starts at the set start date.",
-                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum."
+                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum.",
+                "de": "Das gesamte Zielbudget für ein Jahr. Achtung: Das Jahr beginnt mit dem festgelegten Startdatum."
               }
             },
             {
@@ -3871,32 +3873,37 @@
               "value": "gas_nl_2023",
               "label": {
                 "en": "Distribution scheme",
-                "nl": "Verdeling schema"
+                "nl": "Verdeling schema",
+                "de": "Verteilungsschema"
               },
               "hint": {
                 "en": "The day by day distribution of usage over the year.",
-                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen."
+                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen.",
+                "de": "Die Verteilung des Tagesverbrauchs über das Jahr."
               },
               "values": [
                 {
                   "id": "NONE",
                   "label": {
                     "en": "DISABLE TARGET BUDGET",
-                    "nl": "DOELBUDGET NIET ACTIEF"
+                    "nl": "DOELBUDGET NIET ACTIEF",
+                    "de": "ZIELBUDGET NICHT AKTIV"
                   }
                 },
                 {
                   "id": "linear",
                   "label": {
                     "en": "Linear",
-                    "nl": "Lineair"
+                    "nl": "Lineair",
+                    "de": "Linear"
                   }
                 },
                 {
                   "id": "gas_nl_2023",
                   "label": {
                     "en": "gas_nl_2023 (NL price ceiling)",
-                    "nl": "gas_nl_2023 (plafondprijs)"
+                    "nl": "gas_nl_2023 (plafondprijs)",
+                    "de": "gas_nl_2023 (NL Höchstpreis)"
                   }
                 }
               ]
@@ -4365,10 +4372,12 @@
               "id": "tariff_update_group",
               "type": "number",
               "label": {
-                "en": "Tariff update group (flow or DAP)"
+                "en": "Tariff update group (flow or DAP)",
+                "de": "Tarifaktualisierungsgruppe (Flow oder DAP)"
               },
               "hint": {
-                "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff."
+                "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff.",
+                "de": "Gruppennummer beim Einstellen eines neuen Tarifs über Flow oder DAP. Auf 0 setzen, um die Aktualisierung des Tarifs auszuschließen."
               },
               "value": 1,
               "min": 0,
@@ -4379,10 +4388,12 @@
               "id": "markup_month",
               "type": "number",
               "label": {
-                "en": "Fixed monthly costs"
+                "en": "Fixed monthly costs",
+                "de": "Fixkosten pro Monat"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new month."
+                "en": "Fixed costs that will be added at the start of every new month.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Monats hinzukommen."
               },
               "value": 0
             },
@@ -4390,10 +4401,12 @@
               "id": "markup_day",
               "type": "number",
               "label": {
-                "en": "Fixed daily costs"
+                "en": "Fixed daily costs",
+                "de": "Fixkosten pro Tag"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new day."
+                "en": "Fixed costs that will be added at the start of every new day.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Tages hinzukommen."
               },
               "value": 0
             },
@@ -4401,10 +4414,12 @@
               "id": "markup_hour",
               "type": "number",
               "label": {
-                "en": "Fixed hourly costs"
+                "en": "Fixed hourly costs",
+                "de": "Fixkosten pro Stunde"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new hour."
+                "en": "Fixed costs that will be added at the start of every new hour.",
+                "de": "Fixkosten, die zu Beginn einer jeden neuen Stunde hinzukommen."
               },
               "value": 0
             }
@@ -4641,12 +4656,14 @@
               "type": "number",
               "label": {
                 "en": "Year target budget (kWh)",
-                "nl": "Jaar doelbudget (kWh)"
+                "nl": "Jaar doelbudget (kWh)",
+                "de": "Jahreszielbudget (kWh)"
               },
               "value": 2900,
               "hint": {
                 "en": "The total target budget for a year. Attention: the year starts at the set start date.",
-                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum."
+                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum.",
+                "de": "Das gesamte Zielbudget für ein Jahr. Achtung: Das Jahr beginnt mit dem festgelegten Startdatum."
               }
             },
             {
@@ -4655,32 +4672,37 @@
               "value": "NONE",
               "label": {
                 "en": "Distribution scheme",
-                "nl": "Verdeling schema"
+                "nl": "Verdeling schema",
+                "de": "Verteilungsschema"
               },
               "hint": {
                 "en": "The day by day distribution of usage over the year.",
-                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen."
+                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen.",
+                "de": "Die Verteilung des Tagesverbrauchs über das Jahr."
               },
               "values": [
                 {
                   "id": "NONE",
                   "label": {
                     "en": "DISABLE TARGET BUDGET",
-                    "nl": "DOELBUDGET NIET ACTIEF"
+                    "nl": "DOELBUDGET NIET ACTIEF",
+                    "de": "ZIELBUDGET NICHT AKTIV"
                   }
                 },
                 {
                   "id": "linear",
                   "label": {
                     "en": "Linear",
-                    "nl": "Lineair"
+                    "nl": "Lineair",
+                    "de": "Linear"
                   }
                 },
                 {
                   "id": "el_nl_2023",
                   "label": {
                     "en": "el_nl_2023 (NL price ceiling)",
-                    "nl": "el_nl_2023 (plafondprijs)"
+                    "nl": "el_nl_2023 (plafondprijs)",
+                    "de": "el_nl_2023 (NL Höchstpreis)"
                   }
                 },
                 {
@@ -5156,10 +5178,12 @@
               "id": "tariff_update_group",
               "type": "number",
               "label": {
-                "en": "Tariff update group (flow or DAP)"
+                "en": "Tariff update group (flow or DAP)",
+                "de": "Tarifaktualisierungsgruppe (Flow oder DAP)"
               },
               "hint": {
-                "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff."
+                "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff.",
+                "de": "Gruppennummer beim Einstellen eines neuen Tarifs über Flow oder DAP. Auf 0 setzen, um die Aktualisierung des Tarifs auszuschließen."
               },
               "value": 1,
               "min": 0,
@@ -5170,10 +5194,12 @@
               "id": "markup_month",
               "type": "number",
               "label": {
-                "en": "Fixed monthly costs"
+                "en": "Fixed monthly costs",
+                "de": "Fixkosten pro Monat"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new month."
+                "en": "Fixed costs that will be added at the start of every new month.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Monats hinzukommen."
               },
               "value": 0
             },
@@ -5181,10 +5207,12 @@
               "id": "markup_day",
               "type": "number",
               "label": {
-                "en": "Fixed daily costs"
+                "en": "Fixed daily costs",
+                "de": "Fixkosten pro Tag"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new day."
+                "en": "Fixed costs that will be added at the start of every new day.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Tages hinzukommen."
               },
               "value": 0
             },
@@ -5192,10 +5220,12 @@
               "id": "markup_hour",
               "type": "number",
               "label": {
-                "en": "Fixed hourly costs"
+                "en": "Fixed hourly costs",
+                "de": "Fixkosten pro Stunde"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new hour."
+                "en": "Fixed costs that will be added at the start of every new hour.",
+                "de": "Fixkosten, die zu Beginn einer jeden neuen Stunde hinzukommen."
               },
               "value": 0
             }
@@ -5405,12 +5435,14 @@
               "type": "number",
               "label": {
                 "en": "Year target budget (m³)",
-                "nl": "Jaar doelbudget (m³)"
+                "nl": "Jaar doelbudget (m³)",
+                "de": "Jahreszielbudget (m³)"
               },
               "value": 150,
               "hint": {
                 "en": "The total target budget for a year. Attention: the year starts at the set start date.",
-                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum."
+                "nl": "Het totale doelbudget voor een jaar. LET OP: het jaar begint bij de ingestelde start datum.",
+                "de": "Das gesamte Zielbudget für ein Jahr. Achtung: Das Jahr beginnt mit dem festgelegten Startdatum."
               }
             },
             {
@@ -5419,25 +5451,29 @@
               "value": "linear",
               "label": {
                 "en": "Distribution scheme",
-                "nl": "Verdeling schema"
+                "nl": "Verdeling schema",
+                "de": "Verteilungsschema"
               },
               "hint": {
                 "en": "The day by day distribution of usage over the year.",
-                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen."
+                "nl": "De verdeling van het dagelijkse verbruik over het jaar heen.",
+                "de": "Die Verteilung des Tagesverbrauchs über das Jahr."
               },
               "values": [
                 {
                   "id": "NONE",
                   "label": {
                     "en": "DISABLE TARGET BUDGET",
-                    "nl": "DOELBUDGET NIET ACTIEF"
+                    "nl": "DOELBUDGET NIET ACTIEF",
+                    "de": "ZIELBUDGET NICHT AKTIV"
                   }
                 },
                 {
                   "id": "linear",
                   "label": {
                     "en": "Linear",
-                    "nl": "Lineair"
+                    "nl": "Lineair",
+                    "de": "Linear"
                   }
                 }
               ]
@@ -5906,10 +5942,12 @@
               "id": "tariff_update_group",
               "type": "number",
               "label": {
-                "en": "Tariff update group (flow)"
+                "en": "Tariff update group (flow)",
+                "de": "Tarifaktualisierungsgruppe (Flow)"
               },
               "hint": {
-                "en": "Group number when setting a new tariff via flow. Set at 0 to exclude updating the tariff."
+                "en": "Group number when setting a new tariff via flow. Set at 0 to exclude updating the tariff.",
+                "de": "Gruppennummer beim Einstellen eines neuen Tarifs über Flow. Auf 0 setzen, um die Aktualisierung des Tarifs auszuschließen."
               },
               "value": 1,
               "min": 0,
@@ -5920,10 +5958,12 @@
               "id": "markup_month",
               "type": "number",
               "label": {
-                "en": "Fixed monthly costs"
+                "en": "Fixed monthly costs",
+                "de": "Fixkosten pro Monat"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new month."
+                "en": "Fixed costs that will be added at the start of every new month.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Monats hinzukommen."
               },
               "value": 0
             },
@@ -5931,10 +5971,12 @@
               "id": "markup_day",
               "type": "number",
               "label": {
-                "en": "Fixed daily costs"
+                "en": "Fixed daily costs",
+                "de": "Fixkosten pro Tag"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new day."
+                "en": "Fixed costs that will be added at the start of every new day.",
+                "de": "Fixkosten, die zu Beginn eines jeden neuen Tages hinzukommen."
               },
               "value": 0
             },
@@ -5942,10 +5984,12 @@
               "id": "markup_hour",
               "type": "number",
               "label": {
-                "en": "Fixed hourly costs"
+                "en": "Fixed hourly costs",
+                "de": "Fixkosten pro Stunde"
               },
               "hint": {
-                "en": "Fixed costs that will be added at the start of every new hour."
+                "en": "Fixed costs that will be added at the start of every new hour.",
+                "de": "Fixkosten, die zu Beginn einer jeden neuen Stunde hinzukommen."
               },
               "value": 0
             }
@@ -7241,7 +7285,8 @@
       "type": "number",
       "title": {
         "en": "On budget Month To Date",
-        "nl": "Op budget Maand Zover"
+        "nl": "Op budget Maand Zover",
+        "de": "Im Monatsbudget bis heute"
       },
       "uiComponent": "sensor",
       "icon": "/assets/target.svg",
@@ -7257,7 +7302,8 @@
       "type": "number",
       "title": {
         "en": "On budget Year To date",
-        "nl": "Op budget Jaar Zover"
+        "nl": "Op budget Jaar Zover",
+        "de": "Im Jahresbudget bis heute"
       },
       "uiComponent": "sensor",
       "icon": "/assets/target.svg",
