--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.4.7",
+  "version": "5.4.8",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1697,6 +1697,63 @@
       },
       {
         "title": {
+          "en": "The price !{{is|isn't}} one of the highest the next hours",
+          "nl": "De prijs !{{is|is niet}} een van de hoogste de komende uren"
+        },
+        "titleFormatted": {
+          "en": "The price !{{is|isn't}} one of [[number]] highest in the next [[period]] hours",
+          "nl": "De prijs !{{is|is niet}} een van de [[number]] hoogste in de komende [[period]] uren"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap"
+          },
+          {
+            "type": "number",
+            "name": "period",
+            "title": {
+              "en": "period",
+              "no": "periode",
+              "de": "Zeitraum",
+              "sv": "period",
+              "it": "periodo",
+              "dk": "periode",
+              "nl": "periode"
+            },
+            "placeholder": {
+              "en": "6 - 10"
+            },
+            "min": 6,
+            "max": 10,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "number",
+            "title": {
+              "en": "number",
+              "no": "antall",
+              "de": "Anzahl",
+              "sv": "antal",
+              "it": "numero",
+              "dk": "nummer",
+              "nl": "aantal"
+            },
+            "placeholder": {
+              "en": "1 - 5"
+            },
+            "min": 1,
+            "max": 5,
+            "step": 1
+          }
+        ],
+        "id": "price_highest_next_hours"
+      },
+      {
+        "title": {
           "en": "The price !{{is|isn't}} one of the highest of today",
           "no": "Prisen !{{er|er ikke}} på det høyest idag",
           "de": "Preis !{{ist|ist nicht}} ist heute einer der höchsten",
@@ -2054,6 +2111,63 @@
           }
         ],
         "id": "price_lowest_before"
+      },
+      {
+        "title": {
+          "en": "The price !{{is|isn't}} one of the lowest the next hours",
+          "nl": "De prijs !{{is|is niet}} een van de laagste de komende uren"
+        },
+        "titleFormatted": {
+          "en": "The price !{{is|isn't}} one of [[number]] lowest in the next [[period]] hours",
+          "nl": "De prijs !{{is|is niet}} een van de [[number]] laagste in de komende [[period]] uren"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap"
+          },
+          {
+            "type": "number",
+            "name": "period",
+            "title": {
+              "en": "period",
+              "no": "periode",
+              "de": "Zeitraum",
+              "sv": "period",
+              "it": "periodo",
+              "dk": "periode",
+              "nl": "periode"
+            },
+            "placeholder": {
+              "en": "6 - 10"
+            },
+            "min": 6,
+            "max": 10,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "number",
+            "title": {
+              "en": "number",
+              "no": "antall",
+              "de": "Anzahl",
+              "sv": "antal",
+              "it": "numero",
+              "dk": "nummer",
+              "nl": "aantal"
+            },
+            "placeholder": {
+              "en": "1 - 5"
+            },
+            "min": 1,
+            "max": 5,
+            "step": 1
+          }
+        ],
+        "id": "price_lowest_next_hours"
       },
       {
         "title": {
