--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.5.3",
+  "version": "5.5.4",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1316,15 +1316,18 @@
       {
         "title": {
           "en": "The price !{{is|isn't}} best for (dis)charging home battery.",
-          "nl": "De prijs !{{is|is niet}} het beste om thuisbatterij te (ont)laden."
+          "nl": "De prijs !{{is|is niet}} het beste om thuisbatterij te (ont)laden.",
+          "de": "Der Preis !{{ist|ist nicht}} der Beste zum (Ent-)Laden des Batteriespeichers."
         },
         "titleFormatted": {
-          "en": "The price !{{is|isn't}} best to [[strat]] home battery with mimimum [[minPriceDelta]]€ price delta.",
-          "nl": "De prijs !{{is|is niet}} het beste om thuisbatterij te [[strat]] met minimaal [[minPriceDelta]]€ prijsverschil."
+          "en": "The price !{{is|isn't}} best to [[strat]] home battery with minimum [[minPriceDelta]]€ price delta.",
+          "nl": "De prijs !{{is|is niet}} het beste om thuisbatterij te [[strat]] met minimaal [[minPriceDelta]]€ prijsverschil.",
+          "de": "Der Preis !{{ist|ist nicht}} der Beste zum [[strat]] des Batteriespeichers mit minimaler [[minPriceDelta]]€ Preisdifferenz."
         },
         "hint": {
           "en": "The strategy is ao calculated using the known future hourly prices and the minimum price difference between highest and lowest prices.",
-          "nl": "De strategie wordt o.a. berekend met behulp van alle bekende toekomstige prijzen en het minimale prijsverschil tussen hoogste en laagste prijs."
+          "nl": "De strategie wordt o.a. berekend met behulp van alle bekende toekomstige prijzen en het minimale prijsverschil tussen hoogste en laagste prijs.",
+          "de": "Die Strategie wird unter anderem anhand der bekannten zukünftigen Stundenpreise und der minimalen Preisdifferenz zwischen Höchst- und Tiefstpreis berechnet."
         },
         "highlight": true,
         "args": [
@@ -1338,7 +1341,8 @@
             "name": "minPriceDelta",
             "title": {
               "en": "price delta",
-              "nl": "prijsverschil"
+              "nl": "prijsverschil",
+              "de": "Preisdifferenz"
             },
             "placeholder": {
               "en": "> 0.05"
@@ -1352,21 +1356,24 @@
             "name": "strat",
             "title": {
               "en": "(dis)charge",
-              "nl": "(ont)laden"
+              "nl": "(ont)laden",
+              "de": "(Ent-)Laden"
             },
             "values": [
               {
                 "id": "1",
                 "label": {
                   "en": "discharge",
-                  "nl": "ontladen"
+                  "nl": "ontladen",
+                  "de": "entladen"
                 }
               },
               {
                 "id": "-1",
                 "label": {
                   "en": "charge",
-                  "nl": "laden"
+                  "nl": "laden",
+                  "de": "laden"
                 }
               }
             ]
@@ -2802,7 +2809,8 @@
     {
       "name": {
         "en": "Home Battery Monitor",
-        "nl": "Thuisbatterij Monitor"
+        "nl": "Thuisbatterij Monitor",
+        "de": "Batteriespeicherüberwachung"
       },
       "class": "other",
       "capabilities": [],
@@ -2921,7 +2929,8 @@
           "type": "group",
           "label": {
             "en": "Battery properties",
-            "nl": "Batterij eigenschappen"
+            "nl": "Batterij eigenschappen",
+            "de": "Batterie Eigenschaften"
           },
           "children": [
             {
@@ -2929,13 +2938,15 @@
               "type": "number",
               "label": {
                 "en": "Capacity (kWh)",
-                "nl": "Capaciteit (kWh)"
+                "nl": "Capaciteit (kWh)",
+                "de": "Kapazität (kWh)"
               },
               "value": 5.05,
               "decimals": 2,
               "hint": {
                 "en": "Total storage capacity in kWh.",
-                "nl": "Totale opslag capaciteit in kWh."
+                "nl": "Totale opslag capaciteit in kWh.",
+                "de": "Gesamte Speicherkapazität in kWh."
               }
             },
             {
@@ -2943,14 +2954,16 @@
               "type": "number",
               "label": {
                 "en": "Charging power (W)",
-                "nl": "Laadvermogen (W)"
+                "nl": "Laadvermogen (W)",
+                "de": "Ladeleistung (W)"
               },
               "value": 2150,
               "min": 0,
               "decimals": 0,
               "hint": {
                 "en": "The power at which the battery is charged in Watts.",
-                "nl": "Het vermogen waarmee de batterij wordt geladen in Watt."
+                "nl": "Het vermogen waarmee de batterij wordt geladen in Watt.",
+                "de": "Die Leistung in Watt, mit der die Batterie geladen wird."
               }
             },
             {
@@ -2958,14 +2971,16 @@
               "type": "number",
               "label": {
                 "en": "Discharging power (W)",
-                "nl": "Ontlaadvermogen (W)"
+                "nl": "Ontlaadvermogen (W)",
+                "de": "Entladungsleistung (W)"
               },
               "value": 1750,
               "min": 0,
               "decimals": 0,
               "hint": {
                 "en": "The power at which the battery is discharged in Watts.",
-                "nl": "Het vermogen waarmee de batterij wordt ontladen in Watt."
+                "nl": "Het vermogen waarmee de batterij wordt ontladen in Watt.",
+                "de": "Die Leistung in Watt, mit der die Batterie entladen wird."
               }
             }
           ]
@@ -2974,7 +2989,8 @@
           "type": "group",
           "label": {
             "en": "(Dis)charge Power correction",
-            "nl": "(Ont)laadvermogen correctie"
+            "nl": "(Ont)laadvermogen correctie",
+            "de": "(Ent-)Ladeleistung Korrektur"
           },
           "children": [
             {
@@ -2982,14 +2998,16 @@
               "type": "number",
               "label": {
                 "en": "Own use when idle (W)",
-                "nl": "Eigen verbruik in rust (W)"
+                "nl": "Eigen verbruik in rust (W)",
+                "de": "Standby Eigenverbrauch (W)"
               },
               "value": 2.5,
               "min": 0,
               "decimals": 1,
               "hint": {
                 "en": "Own power usage not reported by the battery.",
-                "nl": "Eigen verbruik niet gerapporteerd door de batterij."
+                "nl": "Eigen verbruik niet gerapporteerd door de batterij.",
+                "de": "Eigenverbrauch, der von der Batterie nicht gemeldet wird."
               }
             },
             {
@@ -2997,14 +3015,16 @@
               "type": "number",
               "label": {
                 "en": "Own use when (dis)charging (W)",
-                "nl": "Eigen verbruik bij (ont)laden (W)"
+                "nl": "Eigen verbruik bij (ont)laden (W)",
+                "de": "Eigenverbrauch bei (Ent-)Ladung (W)."
               },
               "value": 35,
               "min": 0,
               "decimals": 1,
               "hint": {
                 "en": "Own power usage not reported by the battery.",
-                "nl": "Eigen verbruik niet gerapporteerd door de batterij."
+                "nl": "Eigen verbruik niet gerapporteerd door de batterij.",
+                "de": "Eigenverbrauch, der von der Batterie nicht gemeldet wird."
               }
             },
             {
@@ -3012,7 +3032,8 @@
               "type": "number",
               "label": {
                 "en": "Extra loss during charging (%)",
-                "nl": "Extra verlies tijdens laden (%)"
+                "nl": "Extra verlies tijdens laden (%)",
+                "de": "Zusätzlicher Verlust beim Laden (%)"
               },
               "min": 0,
               "max": 30,
@@ -3020,7 +3041,8 @@
               "decimals": 2,
               "hint": {
                 "en": "Extra power loss not reported by the battery.",
-                "nl": "Extra verlies niet gerapporteerd door de batterij."
+                "nl": "Extra verlies niet gerapporteerd door de batterij.",
+                "de": "Zusätzlicher Verlust, der von der Batterie nicht gemeldet wird."
               }
             },
             {
@@ -3028,7 +3050,8 @@
               "type": "number",
               "label": {
                 "en": "Extra loss during discharging (%)",
-                "nl": "Extra verlies tijdens ontladen (%)"
+                "nl": "Extra verlies tijdens ontladen (%)",
+                "de": "Zusätzlicher Verlust beim Entladen (%)"
               },
               "min": 0,
               "max": 30,
@@ -3036,7 +3059,8 @@
               "decimals": 2,
               "hint": {
                 "en": "Extra power loss not reported by the battery.",
-                "nl": "Extra verlies niet gerapporteerd door de batterij."
+                "nl": "Extra verlies niet gerapporteerd door de batterij.",
+                "de": "Zusätzlicher Verlust, der von der Batterie nicht gemeldet wird."
               }
             }
           ]
@@ -3058,11 +3082,13 @@
               "type": "number",
               "label": {
                 "en": "Tariff update group (DAP)",
-                "nl": "Tarief update groep (DAP)"
+                "nl": "Tarief update groep (DAP)",
+                "de": "Tarif Aktualisierungsgruppe (DAP)"
               },
               "hint": {
                 "en": "Group number for getting new tariffs via DAP.",
-                "nl": "Groepnummer voor het krijgen van de tarieven via DAP."
+                "nl": "Groepnummer voor het krijgen van de tarieven via DAP.",
+                "de": "Gruppennummer für den Bezug neuer Tarife über DAP."
               },
               "value": 1,
               "min": 0,
@@ -6817,7 +6843,8 @@
       "type": "number",
       "title": {
         "en": "Charging Total",
-        "nl": "Laden Totaal"
+        "nl": "Laden Totaal",
+        "de": "Aufladung Gesamt"
       },
       "uiComponent": "sensor",
       "icon": "/assets/charged.svg",
@@ -6833,7 +6860,8 @@
       "type": "number",
       "title": {
         "en": "Discharging Total",
-        "nl": "Ontladen Totaal"
+        "nl": "Ontladen Totaal",
+        "de": "Entladung Gesamt"
       },
       "uiComponent": "sensor",
       "icon": "/assets/discharged.svg",
@@ -6937,7 +6965,8 @@
       "type": "number",
       "title": {
         "en": "Stored",
-        "nl": "Opgeslagen"
+        "nl": "Opgeslagen",
+        "de": "Gespeichert"
       },
       "uiComponent": "sensor",
       "icon": "/assets/stored.svg",
