--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.5.4",
+  "version": "5.6.0",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -245,6 +245,13 @@
                   "no": "i morgen",
                   "nl": "morgen"
                 }
+              },
+              {
+                "id": "next_hours",
+                "label": {
+                  "en": "Next hours",
+                  "nl": "Komende uren"
+                }
               }
             ]
           }
@@ -261,7 +268,7 @@
               "nl": "Prijzen"
             },
             "type": "string",
-            "example": "{'0':1.869,'1':1.869,'2':1.869,'3':1.869,'4':1.869,'5':1.869,'6':1.872,'7':1.872,'8':1.872,'9':1.872,'10':1.872,'11':1.872,'12':1.872,'13':1.872,'14':1.872,'15':1.872,'16':1.872,'17':1.872,'18':1.872,'19':1.872,'20':1.872,'21':1.872,'22':1.872,'23':1.872}"
+            "example": "{'0':0.2747,'1':0.2678,'2':0.261,'3':0.2606,'4':0.2672,'5':0.2721,'6':0.272,'7':0.2678,'8':0.2625,'9':0.2516,'10':0.2409,'11':0.2317,'12':0.20,'13':0.15,'14':0.12,'15':0.11,'16':0.12,'17':0.20,'18':0.2772,'19':0.2927,'20':0.3052,'21':0.2944,'22':0.2856,'23':0.2725"
           }
         ],
         "id": "new_prices"
