--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.7.3",
+  "version": "5.7.4",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -21,6 +21,7 @@
   "category": "energy",
   "tags": {
     "en": [
+      "pbth",
       "enelogic",
       "plugwise",
       "beeclear",
@@ -45,6 +46,231 @@
       "pricing",
       "utility bill",
       "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "de": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "sv": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "it": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "no": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "fr": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "dk": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
+      "rekening",
+      "tibber",
+      "battery",
+      "storage"
+    ],
+    "nl": [
+      "pbth",
+      "enelogic",
+      "plugwise",
+      "beeclear",
+      "tibber",
+      "homewizard",
+      "solar panel",
+      "P1",
+      "DSMR",
+      "energy",
+      "power",
+      "gas",
+      "water",
+      "summarizer",
+      "insights",
+      "cost",
+      "tariff",
+      "prediction",
+      "peak",
+      "day ahead",
+      "spot market",
+      "price",
+      "pricing",
+      "utility bill",
+      "stromregning",
+      "piggy",
       "rekening",
       "tibber",
       "battery",
